-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.3 Required
-
Component/s: Distributed Query Execution, Query Execution
-
None
-
Query Execution
-
Fully Compatible
-
ALL
-
QE 2026-02-16
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
BF-41353 revealed an error for findAndModify commands in UWE.
If an invalid findAndModify command is passed in, e.g. findAndModify(undefined)), this will cause a tripwire assertion in UWE, but a (correct) FailedToParse error without UWE.
- causes
-
SERVER-118781 Fix find_and_modify_invalid.js test in change_streams_downgrade
-
- Closed
-