SERVER-118660 Add missing command validation for findAndModify in UWE (#47406)

GitOrigin-RevId: 590e0220339287bf489861aad3d88b39f6b9b524