src/mongo/db/query/write_ops/write_ops.cpp
@@ -919,6 +919,38 @@ FindAndModifyCommandReply FindAndModifyOp::parseResponse(const BSONObj& obj) {
     return FindAndModifyCommandReply::parse(obj, IDLParserContext("findAndModifyReply"));
 }
 
+void FindAndModifyOp::validateCommandRequest(
+    const write_ops::FindAndModifyCommandRequest& request) {
+    uassert(ErrorCodes::FailedToParse,
+            "Either an update or remove=true must be specified",
+            request.getRemove().value_or(false) || request.getUpdate());
+    if (request.getRemove().value_or(false)) {
+        uassert(ErrorCodes::FailedToParse,
+                "Cannot specify both an 'update' and 'remove'=true",
+                !request.getUpdate());
+
+        uassert(ErrorCodes::FailedToParse,
+                "Cannot specify both 'upsert'=true and 'remove'=true ",
+                !request.getUpsert() || !*request.getUpsert());
+
+        uassert(
+            ErrorCodes::FailedToParse,
+            "Cannot specify both 'new'=true and 'remove'=true; 'remove' always returns the deleted "
+            "document",
+            !request.getNew() || !*request.getNew());
+
+        uassert(ErrorCodes::FailedToParse,
+                "Cannot specify 'arrayFilters' and 'remove'=true",
+                !request.getArrayFilters());
+    }
+
+    if (request.getUpdate() &&
+        request.getUpdate()->type() == write_ops::UpdateModification::Type::kPipeline &&
+        request.getArrayFilters()) {
+        uasserted(ErrorCodes::FailedToParse, "Cannot specify 'arrayFilters' and a pipeline update");
+    }
+}
+
 DeleteCommandRequest DeleteOp::parse(const OpMsgRequest& request) {
     auto deleteOp = DeleteCommandRequest::parse(request, IDLParserContext("delete"));
 
